updated to work with fxgl 17.3